fix: 1. 打包方式修改,包名修改 2. 打包部署DockerFile修改，解决打包后启动logs目录问题